sydbox: start to evacuate the rust dependency, only syd_execv left to be implemented and libsyd has the wrappers mostly ready
Signed-off-by: Ⓐlï P☮latel <alip@exherbo.org>

--- a/configure.ac
+++ b/configure.ac
@@ -702,7 +702,8 @@ AC_ARG_ENABLE([sydbox_rs],
 	      [AS_HELP_STRING([--enable-sydbox_rs],
 			      [Enable SydB☮x Rust API])],
 	      [], [enable_sydbox_rs=yes])
-AM_CONDITIONAL([WANT_SYDBOX_RS], test x"$enable_sydbox_rs" = x"yes")
+AM_CONDITIONAL([WANT_SYDBOX_RS], test 0 -eq 1)
+dnl x"$enable_sydbox_rs" = x"yes")
 
 dnl check for pkg-config
 PKG_PROG_PKG_CONFIG([0.20.0])
